<resources>
    <string name="app_name">Story App</string>
    <string name="story_app">Story App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="account_question">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="description">This is a description</string>
    <string name="add_story_menu">Add Story Menu</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="email_warning">Wrong email format</string>
    <string name="password_warning">Password must have at least 6 characters</string>
    <string name="name_warning">Name can\'t be empty</string>
    <string name="register_success">Register success</string>
    <string name="register_fail">Register fail</string>
    <string name="login_success">Login success</string>
    <string name="login_fail">Login fail</string>
    <string name="fail_load_stories">Stories failed to load</string>
    <string name="success_load_stories">Stories success to load</string>
    <string name="permission_denied">Permission denied</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>
    <string name="language_setting">Change Language</string>
    <string name="fail_take_picture">Fail to take picture</string>
    <string name="fail_show_camera">Fail to show camera</string>
    <string name="capture_image">Capture Image</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="detail_photo">Detail Image</string>
    <string name="story_image">Story Image</string>
    <string name="title_activity_story_maps">StoryMapsActivity</string>
    <string name="google_maps">Google Maps</string>
    <string name="story_uploaded_by">\"Story uploaded by \"</string>
    <string name="retry">Try again</string>
    <string name="location_not_found">Your location is not found. Try Again</string>
    <string name="your_location">Your Location</string>
    <string name="location">Location :</string>
    <string name="empty_location">-</string>
</resources>